--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:sqlserver://173.230.136.111;databaseName=testeJWTdm
-spring.datasource.username=sa
-spring.datasource.password=Squad1234
+#spring.datasource.url=jdbc:sqlserver://173.230.136.111;databaseName=testeJWTdm
+#spring.datasource.username=sa
+#spring.datasource.password=Squad1234
+spring.datasource.url=jdbc:sqlserver://10.1.2.51;databaseName=testeJWTdm
+spring.datasource.username=treinamento
+spring.datasource.password=senha
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
